# star-system-bot

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bot.rs  main.rs  model.rs  slang_fr.rs  slang_jp.rs  slang_zh.rs  websocket.rs
src/lib/components/ui/chat/: index.ts
src/lib/stores/: chat.ts
src/routes/: +layout.svelte  +page.svelte  app-sidebar.svelte
src/routes/bot/: +page.svelte
src/routes/settings/: +page.svelte  theme-toggle.svelte
src/routes/test/: +page.svelte  chat-message.svelte
